--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <nav class="nav flex-column">
-  <a class="nav-link text-light my-3" [routerLink]="['/pages/myAccount']">My Cuenta</a>
-  <a class="nav-link text-light my-3" [routerLink]="['/pages/deposit']">Consignar Dinero</a>
-  <a class="nav-link text-light my-3" [routerLink]="['/pages/createAccount']">Crear Cuenta</a>
-  <a class="nav-link text-light my-3" [routerLink]="['/pages/withdrawals']">Retirar Dinero</a>
-  <a class="nav-link text-light my-3" [routerLink]="['/pages/tranfer']">Transferir Dinero</a>
+  <a class="nav-link text-light mb-3 mt-5" [routerLink]="['/pages/myAccount']"><span class="fa fa-user mx-2 text-info"></span>My Cuenta</a>
+  <a class="nav-link text-light my-3" [routerLink]="['/pages/deposit']"><span class="fa fa-angles-up mx-2 text-info"></span>Consignar Dinero</a>
+  <a class="nav-link text-light my-3" [routerLink]="['/pages/createAccount']"><span class="fa fa-users mx-2 text-info"></span>Crear Cuentas</a>
+  <a class="nav-link text-light my-3" [routerLink]="['/pages/withdrawals']"><span class="fa fa-angles-down mx-2 text-info"></span>Retirar Dinero</a>
+  <a class="nav-link text-light my-3" [routerLink]="['/pages/tranfer']"><span class="fa fa-arrow-right-arrow-left mx-2 text-info"></span>Transferir Dinero</a>
 </nav>
 
 
