--- a/src/app/pages/tranfer-money/tranfer-money.component.html
+++ b/src/app/pages/tranfer-money/tranfer-money.component.html
@@ -27,7 +27,7 @@
         </div>
       </div>
     </div>
-    <button type="submit" class="btn btn-info" [disabled]="!miFormulario.valid">
+    <button type="submit" class="btn btn-info mb-4" [disabled]="!miFormulario.valid">
       Transferir
     </button>
   </form>
